# pg-compose-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
pg_compose_cli/: alter_generator.py  ast_objects.py  catalog.py  cli.py  compare.py  deploy.py  diff.py  extract.py  git.py  merge.py  pgdump.py  sorter.py
pg_compose_core/: __init__.py
pg_compose_core/api/: __init__.py  api.py  compare.py  deploy.py  errors.py  health.py  home.py  merge.py  models.py  sort.py
pg_compose_core/api/templates/: home.html
pg_compose_core/cli/: __init__.py  cli.py
pg_compose_core/lib/: __init__.py  alter_generator.py  ast_list.py  ast_objects.py  compare.py  deploy.py  diff.py  extract.py  git.py  merge.py  parser.py  pgdump.py  sorter.py
pg_compose_core/lib/ast/: __init__.py  function.py  list.py  objects.py  table.py
tests/: test_compare.py  test_deploy.py  test_diff.py  test_git.py  test_parser.py  test_qualified_names.py  test_sorter.py
tests/deploy_test/v1/public/tables/: another_table.sql  test_deploy.sql
tests/deploy_test/v1/public/views/: test_view.sql
tests/deploy_test/v2/public/tables/: new_table.sql  test_deploy.sql
tests/deploy_test/v2/public/views/: new_view.sql  test_view.sql
tests/feature_change/v1/public/materialized_views/: product_summary.sql
tests/feature_change/v1/public/tables/: products.sql
tests/feature_change/v2/public/materialized_views/: product_summary.sql
tests/feature_change/v2/public/tables/: products.sql
tests/sort_test_data/tables/: 01_users.sql  02_orders.sql  03_order_items.sql
tests/sort_test_data_complex/tables/: 01_categories.sql  02_products.sql  03_users.sql  04_orders.sql  05_order_items.sql
tests/table_removal/v1/public/tables/: orders.sql  users.sql
tests/table_removal/v2/public/tables/: orders.sql
tests/users/: v1.sql  v2.sql
tests/v1/complex/: schema.sql
tests/v1/complex/functions/: calculate_total.sql  get_user_sales.sql  process_leads.sql
tests/v1/complex/materialized_views/: lead_analytics.sql  monthly_sales.sql  user_stats.sql
tests/v1/complex/tables/: leads.sql  sales.sql  users.sql
tests/v1/complex/types/: lead_source.sql  payment_method.sql  status.sql
tests/v1/complex/views/: active_users.sql  lead_contacts.sql  sales_summary.sql
tests/v1/user_schema/: user.sql
tests/v2/complex/functions/: calculate_total.sql  get_user_sales.sql  process_invoices.sql
tests/v2/complex/materialized_views/: invoice_analytics.sql  monthly_sales.sql  user_stats.sql
tests/v2/complex/tables/: invoices.sql  sales.sql  users.sql
tests/v2/complex/types/: invoice_status.sql  payment_method.sql  status.sql
tests/v2/complex/views/: active_users.sql  invoice_summary.sql  sales_summary.sql
